--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="/node_modules/material-design-lite/material.min.css">
   <script src="/node_modules/material-design-lite/material.min.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <script defer src="dist/bundle.js"></script>
+  <script defer src="/dist/bundle.js"></script>
 </head>
 <body>
   <div id="container" style="display:flex;flex-direction:column;align-items:center;justify-content:center"></div>
