--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script defer src="/dist/bundle.js"></script>
 </head>
 <body>
-  <div id="container" style="display:flex;flex-direction:column;align-items:center;justify-content:center"></div>
+  <div id="container"</div>
   <div id="footer"></div>
 </body>
 </html>
