patched test server to match real world case

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="/vendor/mdl/material.min.css">
-  <script src="/vendor/mdl/material.min.js"></script>
+  <link rel="stylesheet" href="/ui/vendor/mdl/material.min.css">
+  <script src="/ui/vendor/mdl/material.min.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-  <script defer src="/dist/bundle.js"></script>
+  <script defer src="/ui/dist/bundle.js"></script>
 </head>
 <body>
   <div id="container"</div>
