improve navigation with parent site levels indication

--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
   <script src="/ui/vendor/mdl/material.min.js"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script defer src="/ui/dist/bundle.js"></script>
+  <style>
+    .nav-path>a:before{
+      content:"/";
+      padding-right:5px;
+      font-size:30px;
+      vertical-align: middle;
+    }
+    .nav-path>a:hover{
+      background-color:rgba(0,0,0,0.1);
+    }
+
+
+  </style>
 </head>
 <body>
   <div id="container"</div>
